// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Ledger Ledger information query Return the block height 1`] = `1298333403`;

exports[`Integration Ledger blocks Returns blocks by id 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "1dbc81e3196ba4ab9dcb07e1c37bb28ae1c289c0707061f28b567c2f48698d50",
        "merkelRootHash": "0e5751c026e543b2e8ab2eb06099daa1d1e5df47778f7787faab45cdf12fe3a8",
        "number": 2,
        "previousBlockNo": 3,
        "size": 665,
        "slotNo": 1,
      },
      Object {
        "id": "d3fdc8c8ea4050cc87a21cb73110d54e3ec92f8ae76941e8a1957ed6e6a7e0b0",
        "merkelRootHash": "0e5751c026e543b2e8ab2eb06099daa1d1e5df47778f7787faab45cdf12fe3a8",
        "number": 30,
        "previousBlockNo": 31,
        "size": 667,
        "slotNo": 29,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration Ledger blocks Returns blocks by number 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "f0f7892b5c333cffc4b3c4344de48af4cc63f55e44936196f365a9ef2244134f",
        "merkelRootHash": "0e5751c026e543b2e8ab2eb06099daa1d1e5df47778f7787faab45cdf12fe3a8",
        "number": 1,
        "previousBlockNo": 2,
        "size": 665,
        "slotNo": 0,
      },
      Object {
        "id": "1dbc81e3196ba4ab9dcb07e1c37bb28ae1c289c0707061f28b567c2f48698d50",
        "merkelRootHash": "0e5751c026e543b2e8ab2eb06099daa1d1e5df47778f7787faab45cdf12fe3a8",
        "number": 2,
        "previousBlockNo": 3,
        "size": 665,
        "slotNo": 1,
      },
      Object {
        "id": "d3fdc8c8ea4050cc87a21cb73110d54e3ec92f8ae76941e8a1957ed6e6a7e0b0",
        "merkelRootHash": "0e5751c026e543b2e8ab2eb06099daa1d1e5df47778f7787faab45cdf12fe3a8",
        "number": 30,
        "previousBlockNo": 31,
        "size": 667,
        "slotNo": 29,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration Ledger transactions Can return transactions in blocks as a nested array 1`] = `
Object {
  "data": Object {
    "blocks": Array [
      Object {
        "id": "f0f7892b5c333cffc4b3c4344de48af4cc63f55e44936196f365a9ef2244134f",
        "merkelRootHash": "0e5751c026e543b2e8ab2eb06099daa1d1e5df47778f7787faab45cdf12fe3a8",
        "number": 1,
        "previousBlockNo": 2,
        "size": 665,
        "slotNo": 0,
        "transactions": Array [
          Object {
            "fee": 0,
            "id": "6404e4a4813d9d590157b33187d4fb33a29e2d85902428739ae4f3321653b2ec",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "e71d7423af7969749d9fdc665ccda40d95b1dc5b72fce28c99d8e87d",
                "value": 391257000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "3cf49d297c0f325f42dce650f04bfc098a7952171d505f2a38003888115bb4ff",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "cda915fbb03ce7728c9b0a471aea5edf3505bcdd10d89f96ce31fae6",
                "value": 384735000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "851b648631e35c79352260c20ff8477feddcbbe10714b3b91a823b45adc311b0",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "8fcf1b5f7a415bc1805bb36e266bbc301ea1aba694e3cd60102ed47d",
                "value": 416901000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "5230b0cbccf6f449f0847d8ad1d634a7a49df60d8c142bb8cc2dbc8ca03d9e34",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "93dc276d7e0b08993f79db33c6c680b06e6fd32eaf907831e6615acc",
                "value": 385506000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "b95d8290b312b6478f686fb8e8340e84e7ddd20fdee329a50c6c99bdc8b76361",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "d60a85c8c304b070b46e21e3b913b6da1285f5f65255325f3060271d",
                "value": 2609588000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "98aba235a2b624a5d83dd46ea17d65427b15e23bf8f2bf1f3eb1236d8986b391",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "381078052e9fe5cbc4f54f9b66bf89a5f1e34c422d7a70ac84aecb76",
                "value": 382736000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "21ea26fec7eb46b14b2f07a479b7886af1a4b91224316cb35cc9acc660bf26bb",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "0ed96d9f068040171ea66951c608ca69b98fc074e588893d49202544",
                "value": 2323289000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "c44094f4c8aed2dda51844f089351af1bc851dd8ba1eaa5cab29cff48be28b0a",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "8c95dc367524bb6da0d5e255f3b3106809c803ce169ba9a6a67f8027",
                "value": 379329000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "3589865ae72bd0644c1eb02019aba7eb5bbea54bf1f3874092bfe2588b35392c",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "82ce0190ef70f9a4062d09d832f9fba99b8b231d2668684c8ec98b53",
                "value": 456350000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "77705bba1d687a816ff5a04ec0c358a1f1ef075ab7f9c6cc2763e792581cec6d",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "957cbdf67084cca68a8b94eeab55b4ff8b8ebc8dcc4975e33fe36326",
                "value": 384567000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "8a9625c841eea0dd2bb6cf551eabe6523b7290c9ce34be74eedef2dd8f7ecc54",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "1c69419d7228dcae1cae41e07eefa7bed7248920325aebd51241d781",
                "value": 500919000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "2d51b929d79a0ac8f360f38e8a38cdcb28ca84139aced314c5d7edc739aa4366",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "c99bf0a4d6e235e2df244b90aa55dd042df43f9098e63ba9f9e5057f",
                "value": 1153846000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "92219b986d4c6c81aa21b9f5e8b46803050fa2c957316f1bc08950cccd70d240",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "cc0c4b515a8f144d0877282af4af012aa574a2d59742def8a052737e",
                "value": 7472644000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "237e83c947f8815fa82219d048bdf3a7782f695f94c456cda77171aeaace7ab7",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "80625bef025c541370212050da8af3e46c84f9bbc5338d0733dd729a",
                "value": 452425000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "a444466dc8cb222aa7b30c5fc37a934ebc25b6679c3d0f2360107e5ffc15e75e",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "3a237876e2beeee57b4b1663a8f6292e0c2d22c2d74c296296e8fe91",
                "value": 7692307000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "d922298743b0d4474fa1bfdef782eada6df88434c9b760a8a1dc3bf667843957",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "3791c31f0d7ff10970ee7d58231e11dbed87ab3657c7d5a4a0cc432c",
                "value": 384573000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "36db3296560d66ae06ab0fd318dfb0dd39d8f05badb01af7c2dc4e78d8c0e912",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "7c1b05e36b7e383e9b31a5c9878c75c98473a557ca06f5c332dfa1ea",
                "value": 462355000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "15d4252c430cde2ff7aec39aaff321a6a9c0624ccef06e1d80ce10281ee33f41",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "a75b0dd6dd06b37c56e20d48bf8ca4a634cf968079abb7bed7e9af91",
                "value": 470773000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "9e08efad61cbad22622ac9a226053bdb1da6d7b206d421dc43ed51a04e3df782",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "467567252be64925bb4e361f35a3aaf488dbf1da009af644a061f217",
                "value": 1000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "0760a9f8e4e03b6c6489c7a79bc9f6676d7f5fc31e0dddbc877bab8bece74f05",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "cb6a9f28b78bbf047d1030cb81e731fa52b1753ccd3db3af51e04056",
                "value": 411085000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "0f0efe95e3d94af9e7ed127af81ce4721246a0ea39b0742ea8eb937a968b7f86",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "8919c4b7bf89855464e1626d294a7b9bbe5c669aef648b42945bd68e",
                "value": 500305000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "da264fe7b62e11598597b55d068f0e2df030443dc7854f6dd7b2a601cf4cb917",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "cb4ced01c701c2b76de069d389becbfd689a2680e88eeb5e88696640",
                "value": 377802000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "57c4e22be70567dd9c839f3c7d86ebc47a4ad93bde3b21e643c9b4814a5ad5ca",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "481c5ccf914c0461f817f31bf2a50379f6dc1f1ecf54dc9df6f17379",
                "value": 378507000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "a812b3a85ce52392a992d99fb3c67469932d8fdd006e70861cc6a01f3ac309ac",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "8527bfc60119d989378411b77f69e12467875dcaac6f52093b7dee98",
                "value": 380005000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "c1026dc643864c9e42b9a5c7d936de3e132f1edfe599ec5a999a39660af60167",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "a9af3e5c25d58bd9b215e3726f9f141037736ef651746687d41ed60e",
                "value": 901105000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "93cf53cbf2475adf8b846fd2ea97ce352097d26fa88843dc761d2b1bbf79f30b",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "ea5cf6acbb664af36e1beb9aec7f75ce8f956a5b6231ce56828f7886",
                "value": 390975000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "1a01b3e84174069a1232198b15ecb286599195c76ebc59fc89915158c1965581",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "04585391afdcd6918cfa76091b2434db56c0cfcd64f96868315a3fd7",
                "value": 383233000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "927edb96f3386ab91b5f5d85d84cb4253c65b1c2f65fa7df25f81fab1d62987a",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "8384f3ec4661544b68c77784f694ce2ad4e2097057b8a2e0ba3b36b9",
                "value": 538861000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "616cd521cc3f99cacfa1996ef70adc37041ea45ba09a907d8432c19f3e8ebfcc",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "e803fa69eafdeb92a649b01f6fa57adf21471a6012dbf5651d665612",
                "value": 469217000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "29c8a63ac4ff2bdb630656e9e568c3e526ef316b280b7123b9a9a9719f9ce8d7",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "1bcec52c55b70baabcbd4b0f2477970fd27fd90c85b3a8d0d86e0bb9",
                "value": 455585000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "e881425f88472464ab74a0c226aee2b8757b4cf3afb4d16d08c9a65cd5b923f4",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "ff74d6a4d77a9396169bfb6c71de703d41bd87672035ecff993b8c8a",
                "value": 351713000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "cd1ab525ad5409768d419377b876b72e978ff350f065f137a6e13a37a3a0ba6d",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "778b30f2933d0425662da2052dc9e6e133695162943c3e6d2805da75",
                "value": 2500833000000,
              },
            ],
          },
          Object {
            "fee": 0,
            "id": "9301d7cf3d996b021ea7a77f7ca89434681cdde50663738297f133d087b2724e",
            "inputs": Array [],
            "outputs": Array [
              Object {
                "address": "54c66982a2006ac822bbb1502474c01176744dd6dc8f17146c8eabd6",
                "value": 499999000000,
              },
            ],
          },
        ],
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration Ledger transactions Returns null if for specific transaction lookup 1`] = `
Object {
  "data": Object {
    "transactions": Array [
      null,
      Object {
        "blockNo": 1,
        "fee": 0,
        "id": "3ec59e9b74e297f4a60ea026baa225ce4ae8fde2b017ad1eb2b691acc1d0a843",
        "inputs": Array [],
        "outputs": Array [
          Object {
            "address": "3e44c7393b8c1fa97516c4aaa7667a6ad4b8ee79e0bd5a2e005fcc27",
            "value": 1084654000000,
          },
        ],
      },
      null,
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Integration Ledger transactions Returns transactions by IDs 1`] = `
Object {
  "data": Object {
    "transactions": Array [
      Object {
        "blockNo": 23300,
        "fee": 0,
        "id": "6ac19b8efd7114eea29080064b1ec6b5a10346a6212ee338d46f98b733851e3b",
        "inputs": Array [
          Object {
            "address": "3e44c7393b8c1fa97516c4aaa7667a6ad4b8ee79e0bd5a2e005fcc27",
            "sourceTxId": "3ec59e9b74e297f4a60ea026baa225ce4ae8fde2b017ad1eb2b691acc1d0a843",
            "sourceTxIndex": 0,
            "value": 1084654000000,
          },
        ],
        "outputs": Array [
          Object {
            "address": "4b4853a4c6e9fe3f56d816445a304fb6671423420343f7b62e5f484e",
            "value": 1084654000000,
          },
        ],
      },
      Object {
        "blockNo": 1,
        "fee": 0,
        "id": "3ec59e9b74e297f4a60ea026baa225ce4ae8fde2b017ad1eb2b691acc1d0a843",
        "inputs": Array [],
        "outputs": Array [
          Object {
            "address": "3e44c7393b8c1fa97516c4aaa7667a6ad4b8ee79e0bd5a2e005fcc27",
            "value": 1084654000000,
          },
        ],
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
